<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"
            android:src="@drawable/mainscreenimage"
            app:layout_constraintBottom_toTopOf="@id/recyclerViewWithCountries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/updateIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            android:contentDescription="@string/update_button"
            android:layout_marginEnd="12dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avd_anim" />

        <TextView
            android:id="@+id/app_name_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/update_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/update_label_for_batton"
            app:layout_constraintEnd_toEndOf="@+id/updateIB"
            app:layout_constraintStart_toStartOf="@+id/updateIB"
            app:layout_constraintTop_toBottomOf="@+id/updateIB" />

        <TextView
            android:id="@+id/casesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/click_for_update"
            android:textColor="#FA0B0B"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deathsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/click_for_update"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casesTV" />

        <TextView
            android:id="@+id/recoveredTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/click_for_update"
            android:textColor="#39FD41"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathsTV" />

        <TextView
            android:id="@+id/main_casesLTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/cases"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/casesTV"
            app:layout_constraintEnd_toEndOf="@+id/casesTV"
            app:layout_constraintStart_toStartOf="@+id/casesTV" />

        <TextView
            android:id="@+id/main_deathsLTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/deaths"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/deathsTV"
            app:layout_constraintEnd_toEndOf="@+id/deathsTV"
            app:layout_constraintStart_toStartOf="@+id/deathsTV" />

        <TextView
            android:id="@+id/main_recoveredLTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_8dp"
            android:text="@string/recovered"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recoveredTV"
            app:layout_constraintEnd_toEndOf="@+id/recoveredTV"
            app:layout_constraintStart_toStartOf="@+id/recoveredTV" />

        <TextView
            android:id="@+id/sorted_by_LTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="45dp"
            android:text="@string/sort"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoveredTV" />

        <Spinner
            android:id="@+id/spinner_with_sort_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:entries="@array/sortItems"
            android:textColor="?attr/textcolor"
            app:layout_constraintBottom_toBottomOf="@+id/sorted_by_LTV"
            app:layout_constraintStart_toEndOf="@+id/sorted_by_LTV"
            app:layout_constraintTop_toTopOf="@+id/sorted_by_LTV" />


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchSV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_8dp"
            android:layout_marginBottom="@dimen/size_8dp"
            app:searchIcon="@android:drawable/ic_menu_search"
            android:ems="10"
            android:gravity="clip_vertical"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewWithCountries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sorted_by_LTV" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewWithCountries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchSV"
            tools:itemCount="2"
            tools:listitem="@layout/list_item_for_country" >

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
